--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 						<a href="">Read More</a>
 					</div>
 				</div>
-				<div class="social">
-					<a href=""><i class="fab fa-facebook-f"></i></a>
-					<a href=""><i class="fab fa-twitter"></i></a>
-					<a href=""><i class="fab fa-instagram"></i></a>
-				</div>
+<!-- 				<div class="social"> -->
+<!-- 					<a href=""><i class="fab fa-facebook-f"></i></a> -->
+<!-- 					<a href=""><i class="fab fa-twitter"></i></a> -->
+<!-- 					<a href=""><i class="fab fa-instagram"></i></a> -->
+<!-- 				</div> -->
 			</div>
 			<div class="image-section">
 				<img src="image/img one.jpg">
